add_subdirectory(OpcodeCounter)
add_subdirectory(BBCounter)
add_subdirectory(BBinLoopCounter)
add_subdirectory(VariableInBB)
add_subdirectory(LiveVariableInBB)
add_subdirectory(LiveVariableViaBB)
add_subdirectory(LiveVariableViaInst)
add_subdirectory(ParameterCounter)
add_subdirectory(FileStateSimulator)
add_subdirectory(InterSignAnalysis)